[project]
name = "graphfusionai"
version = "0.1.3"
description = "A Python framework for building multi-agent systems with Knowledge Graph integration"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "hatchling>=1.27.0",
    "networkx>=3.4.2",
    "numpy>=1.24.0",
    "oauthlib>=3.2.2",
    "openai>=1.64.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "transformers>=4.49.0",
    "tensorflow>=2.15.0",
    "torch>=2.2.0",
    "sentence-transformers>=2.5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graphfusionai"]
